"sobre", fixed links and scrollbar
section "sobre" is almost done, stylized scrollbar and fix media social links

--- a/static/style.css
+++ b/static/style.css
@@ -158,3 +158,17 @@ i.menu-mobile {
     margin-left: 0;
   }
 }
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  width: 12px;
+  box-shadow: inset 0 0 .3rem #000000;
+  background-color: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #088012;
+}
